appId: org.reactjs.native.example.SzymonChmalOnboarding
---
- launchApp
- tapOn: Warsaw.*
- assertVisible: "Details"
- assertVisible: "Warsaw"
- back
- assertVisible: "Home"
